# MinimalistBT-CST

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt  main.cpp
includes/blocktree.utils/: HashString.h  RabinKarp.h
includes/compressed/: BTCST.h  BTCSTLCSA.h  BTCSTLCSADABT.h  BTCSTLCSALCSA.h  BTCT.h  DABT.h
includes/lcsa/: LCSALENGTHS.hpp  repair.hpp
includes/pointer_based/: BlockTree.h  SumBlockTree.h
includes/pointer_based/blocks/: BackBlock.h  Block.h  InternalBlock.h  LeafBlock.h  SumBackBlock.h  SumBlock.h  SumInternalBlock.h  SumLeafBlock.h
src/compressed/: BTCST.cpp  BTCSTLCSA.cpp  BTCSTLCSADABT.cpp  BTCSTLCSALCSA.cpp  BTCT.cpp  DABT.cpp
src/pointer_based/: BlockTree.cpp  SumBlockTree.cpp
src/pointer_based/blocks/: BackBlock.cpp  Block.cpp  InternalBlock.cpp  LeafBlock.cpp  SumBackBlock.cpp  SumBlock.cpp  SumInternalBlock.cpp  SumLeafBlock.cpp
src/utils/: HashString.cpp  RabinKarp.cpp
tests/compressed/: BTCTFixture.cpp  CBlockTreeFixture.cpp  CMakeLists.txt
tests/pointer_based/: BlockTreeBasicPropertiesFixture.cpp  CMakeLists.txt
